--- a/lib/spawn_api_web/templates/layout/app.html.eex
+++ b/lib/spawn_api_web/templates/layout/app.html.eex
@@ -18,6 +18,7 @@
     <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
     <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
     <%= render @view_module, @view_template, assigns %>
+    <div id="spawn-app"></div>
     </main>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
