--- a/lib/spawn_api_web/templates/api_schema/new.html.eex
+++ b/lib/spawn_api_web/templates/api_schema/new.html.eex
@@ -3,9 +3,6 @@
   <p class="lead">An API data generator that creates mock API data for you!</p>
 </div>
 
-<div class="row">
-  <div class="col-lg-12" id="spawn-app">
-  </div>
-</div>
+<div id="spawn-app">
 
 
